--- a/SASMobileApp1/SASMobileApp1/Views/PatientDetailsPage.xaml
+++ b/SASMobileApp1/SASMobileApp1/Views/PatientDetailsPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SASMobileApp1.Views.PatientDetailsPage">
+             x:Class="SASMobileApp1.Views.PatientDetailsPage"
+             Title="Patient Details">
 <StackLayout>
     <StackLayout Orientation="Horizontal" Padding="13, 0">
                 <Label Text="Selected Patient:" VerticalOptions="Center"></Label>
