--- a/SASMobileApp1/SASMobileApp1/Views/PropertyPage.xaml
+++ b/SASMobileApp1/SASMobileApp1/Views/PropertyPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SASMobileApp1.Views.PropertyPage">
+             x:Class="SASMobileApp1.Views.PropertyPage"
+             Title="Patient Property">
 
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
         <Label Text="Property Page" />
